--- a/Voronoi/MainWindow.xaml
+++ b/Voronoi/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="1"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0"/>
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <Canvas x:Name="canvas" Grid.Column="0" MouseDown="canvas_MouseDown" Background="White" ClipToBounds="true">
